sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:22: error: not found: value swapped
       	} while (ecart > 1 && swapped)
                              ^