sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeurs();
     var swap = false;
     var i = 0;
		do
       	{
			if (ecart > 1)
				ecart = (ecart.toDouble / 1.3).toInt
			i = 0;
			swap = false;
			do
			{
        		  if (plusPetit(i+ecart,i))
		       {
			    echange(i,i+ecart);
            	    swap = true
		       }

			} while (i+ecart < getNombreValeurs())
       		
       	} while (ecart > 1 && swapped)
}
